# master-hw

./: .gitignore  Pipfile  README.md  data_insights.md  docker-compose.yml  notes.md  pyproject.toml  text_generation_pipeline_example.ipynb  week 5.ipynb  week1.ipynb  week2.ipynb  week3.ipynb
E2/: problems.ipynb
Extra/: MusicRecommender.ipynb
assignment_1/: asg1_p1.py  ass1_p2.ipynb  environment.yml  problem_2.py
assignment_2/: hw2_p1.py  hw2_p2.py  soc-sign-bitcoinotc.csv
assignment_3/: README.md  asg3_p2_results.csv  hw3_p2.py
assignment_4/: hw4_p1.ipynb  hw4_p2.py
bonus/: hw_bonus.ipynb  pvldb.xlsx
ex1/: CV-2024-exercises-01.ipynb
ex2/: CV-2024-exercises-02.ipynb
ex3/: Exercise 3.ipynb
ex4/: Exercise 4.ipynb
ex5/: Exercise 5.ipynb
ex6/: Exercise 6.ipynb
ex_1/: Makefile_problem3  Makefile_problem4  get_freq  visualization.ipynb
excercise_1/: .gitignore  heavy.py
excercise_2/: .gitignore  Makefile  gmon.out  problem4_prof.txt  problem_1.c  problem_3.c  readme.md
excercise_3/: .gitignore  Makefile  ex3_p1.cpp  ex3_p4.cc  ex3p3.c
exercise_2/: exercise_2_template.ipynb  exercise_2_template_new_March27.ipynb
exercise_3/: exercise_3_template.ipynb  pretrained_MNIST_model.pt
exercise_4/: Makefile  README.md  ex4.cc  ex4.hpp  ex4_p1_a.cc  ex4_p1_b.cc  ex4_p2_a.cc  ex4_p2_b.cc  ex4_p2_c.cc  ex4_p3.cc  ex4_p3_gencode.py  ex4_p4_1.cc  ex4p4.cpp  exercise_4_template.ipynb
exercise_5/: exercise_5_template.ipynb
exercise_6/: .gitignore  exercise_6_template.ipynb
exercise_7/: .gitignore
exercise_8/: .gitignore  Makefile  evaluation.ipynb  (+2 more)
(+331 files in other folders)
