[project]
name = "hw_CV"
version = "0.1.0"
description = "Repo for Computer Vision course in UHelsinki"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "ipython>=8.27.0",
    "ipywidgets>=8.1.5",
    "numpy>=2.1.1",
    "opencv-python>=4.10.0.84",
    "pandas>=2.2.2",
    "pillow>=10.4.0",
    "plotly>=5.24.0",
    "seaborn>=0.13.2",
]
