[project]
name = "hw_CV"
version = "0.1.0"
description = "Repo for Computer Vision course in UHelsinki"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "ipython>=8.27.0",
    "ipywidgets>=8.1.5",
    "jupyterlab>=4.2.5",
    "loguru>=0.7.2",
    "nbconvert[webpdf]>=7.16.4",
    "numpy>=2.1.1",
    "opencv-contrib-python>=4.10.0.84",
    "opencv-python>=4.10.0.84",
    "pandas>=2.2.2",
    "pillow>=10.4.0",
    "plotly>=5.24.0",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "tensorboard>=2.18.0",
    "torch-tb-profiler>=0.4.3",
    "torch>=2.4.1",
    "torchaudio>=2.4.1",
    "torchvision>=0.19.1",
    "tqdm>=4.66.5",
]
